--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.15.0",
     "@tanstack/react-query-devtools": "^5.15.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
